# kg-oss4climate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  makefile  pyproject.toml
.devcontainer/: devcontainer.json
src/: build_knowledge_graph.py  ner.py
src/climate_knowledge_graph/: __init__.py  configuration.py  exceptions.py  graph.py  helpers.py
src/climate_knowledge_graph/builder/: __init__.py  llm_based.py  rule_based.py
src/climate_knowledge_graph/builder/templates/: __init__.py
src/climate_knowledge_graph/data_sources/: oss4climate_io.py
src/climate_knowledge_graph/semantics/: __init__.py
src/scripts/: create_graph_from_oss4climate.py  create_graph_from_osstech_listing.py  create_osstech_organisation_metadata.py  create_wordcloud_from_oss4climate.py
src/shell/: neo4j_run.sh  neo4j_run_in_docker.sh
src/test/: test_import.py
