[project]
name = "climate-knowledge-graph"
version = "0.1.0"
description = "This package  supports Knowledge Graph building for climate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-neo4j>=0.5.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
]
packages = [
    "src/climate_knowledge_graph",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
builder = [
    "beautifulsoup4>=4.13.4",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-mistralai>=0.2.11",
    "markdown>=3.8.2",
    "unstructured>=0.18.13",
]
test = [
    "pytest>=8.4.1",
]
